[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.module]
name = "aiommost"

[project]
name = "aiommost"
authors = [
    {name = "Vladimir Puzakov", email = "puzakov@rambler.ru"},
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Operating System :: OS Independent',
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "orjson",
    "httpx",
    "pydantic",
]
requires-python = ">=3.10.0"
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/vppuzakov/aiommost"
Issues = "https://github.com/vppuzakov/aiommost/issues"

[project.optional-dependencies]
test = [
    "faker>=9.8,<10.0",
    "pytest>=6.2,<7.0",
    "pytest-clarity>=1.0,<2",
    "pytest-cov>=3.0,<4",
    "pytest-dotenv>=0.5.2,<1",
    "pytest-mock>=3.6,<4",
    "pytest-testdox>=2,<3",
]
dev = [
    "mypy>=0.910,<1",
    "wemake_python_styleguide>=0.15.3,<1",
]

[tool.pytest.ini_options]
norecursedirs = [
    "hooks",
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
]

addopts = [
  "--strict",
  "--tb=short",
  "--show-capture=log",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml:coverage.xml",
  "--cov-branch",
  "--cov=aiommost",
  "--testdox",
  "--doctest-modules",
]

filterwarnings = [
    "ignore::DeprecationWarning",
]

env_override_existing_values = 1
env_files = [".env", "test.env"]

[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
